--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@
     box-sizing: border-box; /* Evitar problemas de tamaño */
 }
 
+.text-center{
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    font-weight: bold;
+}
+
 body {
     padding: 10px;
     background-color: #f4f4f4;
@@ -20,6 +27,7 @@ body {
     max-width: 100%; /* Eliminar el ancho fijo, o usa un máximo para que sea más flexible */
     margin: 0 auto; /* Centrar el contenedor */
     width: 800px;
+    height: auto;
 }
 
 h4.text-info {
@@ -28,6 +36,7 @@ h4.text-info {
 
 .table-bordered {
     background-color: #34495e;
+    border-radius: 20px;
 }
 
 input.form-control, select.form-select, textarea.form-control {
@@ -51,18 +60,19 @@ button:hover {
 }
 
 textarea.form-control {
-    color: #2c3e50;
+    color: #000000;
 }
 
 /* Modo Claro */
 body.light-mode {
     background-color: #f4f4f4;
-    color: #2c3e50;
+    color: #000000;
 }
 
 body.light-mode .card {
     background-color: #ecf0f1;
-    color: #2c3e50;
+    color: #000000;
+    border-radius: 10px;
 }
 
 body.light-mode .table-bordered {
@@ -71,20 +81,21 @@ body.light-mode .table-bordered {
 
 /* Modo Oscuro */
 body.dark-mode {
-    background-color: #2c3e50;
+    background-color: #000000;
     color: white;
 }
 
 body.dark-mode .card {
-    background-color: #34495e;
-    color: white;
+    background-color: #000000;
+    color: rgb(255, 255, 255);
+    border-radius: 10px;
 }
 
 body.dark-mode .form-control,
 body.dark-mode .form-select,
 body.dark-mode textarea {
     background-color: #ecf0f1;
-    color: #2c3e50;
+    color: #000000;
 }
 
 body.dark-mode .btn {
@@ -117,3 +128,9 @@ body.dark-mode .btn:hover {
 #lista-actividades .list-group-item button {
     margin-right: 10px; /* Espacio entre los elementos de cada fila */
 }
+
+.concluida {
+    background-color: #d3f9d8; /* Color verde claro para indicar actividad concluida */
+    text-decoration: line-through; /* Opcional: Tachar el texto */
+}
+
