--- a/styles.css
+++ b/styles.css
@@ -134,3 +134,7 @@ body.dark-mode .btn:hover {
     text-decoration: line-through; /* Opcional: Tachar el texto */
 }
 
+
+.pos-but{
+    margin-top: -5px;
+}
